# GO-Manager/internal/http/handlers/passwordreset/dto.go
@@ -1,0 +1,10 @@
+package passwordreset
+
+type ForgotPasswordRequest struct {
+	Email string `json:"email"`
+}
+
+type ResetPasswordRequest struct {
+	Token    string `json:"token"`
+	Password string `json:"password"`
+}
